adding form control

--- a/chat-app/src/app/components/login/login.component.scss
+++ b/chat-app/src/app/components/login/login.component.scss
@@ -7,3 +7,13 @@ mat-dialog-options {
   display: flex;
   justify-content: center;
 }
+
+mat-dialog-content {
+  display: flex;
+  flex-direction: column;
+}
+
+input-container {
+  display: flex;
+  flex-direction: row;
+}
