--- a/chat-app/src/app/components/login/login.component.html
+++ b/chat-app/src/app/components/login/login.component.html
@@ -1,14 +1,25 @@
 <h2 mat-dialog-title style='font-weight: bold;'>Log In:</h2>
-<mat-dialog-content></mat-dialog-content>
-<mat-form-field floatLabel='auto' appearance="fill">
-  <mat-label>User Name</mat-label>
-  <input matInput required>
-</mat-form-field>
-<mat-form-field floatLabel='auto'>
-  <mat-label>Password</mat-label>
-  <input matInput required type='password'>
-</mat-form-field>
-<mat-dialog-actions>
-  <button mat-button (click)='login()'>Log In</button>
-  <button mat-button (click)='openCreateAccount()'>Create Account</button>
-</mat-dialog-actions>
+@if (loginForm) {
+  <form [formGroup]='loginForm'>
+    <mat-dialog-content>
+      <div class='input-container'>
+        <mat-icon>person</mat-icon>
+        <mat-form-field floatLabel='auto'>
+          <mat-label>User Name</mat-label>
+          <input formControlName='usename' matInput required>
+        </mat-form-field>
+      </div>
+      <div class='input-container'>
+        <mat-icon>lock</mat-icon>
+        <mat-form-field floatLabel='auto'>
+          <mat-label>Password</mat-label>
+          <input formControlName='password' matInput required type='password'>
+        </mat-form-field>
+      </div>
+    </mat-dialog-content>
+    <mat-dialog-actions>
+      <button mat-button (click)='login()'>Log In</button>
+      <button mat-button (click)='openCreateAccount()'>Create Account</button>
+    </mat-dialog-actions>
+  </form>
+}
