--- a/chat-app/src/app/components/create-account/create-account.component.html
+++ b/chat-app/src/app/components/create-account/create-account.component.html
@@ -1,14 +1,28 @@
 <h2 mat-dialog-title style='font-weight: bold;'>Create Account:</h2>
-<mat-dialog-content></mat-dialog-content>
-<mat-form-field floatLabel='auto' appearance="fill">
-  <mat-label>User Name</mat-label>
-  <input matInput required>
-</mat-form-field>
-<mat-form-field floatLabel='auto'>
-  <mat-label>Password</mat-label>
-  <input matInput required type='password'>
-</mat-form-field>
-<mat-dialog-actions>
-  <button mat-button (click)='createAccount()'>Create Account</button>
-  <button mat-button (click)='cancel()'>Cancel</button>
-</mat-dialog-actions>
+@if (createForm) {
+  <form [formGroup]='createForm'>
+    <mat-dialog-content>
+      <div class='input-container'>
+        <mat-icon>person</mat-icon>
+        <mat-form-field floatLabel='auto'>
+          <mat-label>User Name</mat-label>
+          <input formControlName='username' matInput required>
+          <mat-error>username required</mat-error>
+        </mat-form-field>
+      </div>
+      <div class='input-container'>
+        <mat-icon>lock</mat-icon>
+        <mat-form-field floatLabel='auto'>
+          <mat-label>Password</mat-label>
+          <input formControlName='password' matInput required type='password'>
+          <mat-error>password required</mat-error>
+        </mat-form-field>
+      </div>
+    </mat-dialog-content>
+    <mat-dialog-actions>
+      <button mat-button (click)='createAccount()'>Create Account</button>
+      <button mat-button (click)='cancel()'>Cancel</button>
+    </mat-dialog-actions>
+
+  </form>
+}
