--- a/chat-app/src/app/components/login/login.component.html
+++ b/chat-app/src/app/components/login/login.component.html
@@ -6,7 +6,8 @@
         <mat-icon>person</mat-icon>
         <mat-form-field floatLabel='auto'>
           <mat-label>User Name</mat-label>
-          <input formControlName='usename' matInput required>
+          <input formControlName='username' matInput required>
+          <mat-error>username required</mat-error>
         </mat-form-field>
       </div>
       <div class='input-container'>
@@ -14,11 +15,12 @@
         <mat-form-field floatLabel='auto'>
           <mat-label>Password</mat-label>
           <input formControlName='password' matInput required type='password'>
+          <mat-error>password required</mat-error>
         </mat-form-field>
       </div>
     </mat-dialog-content>
     <mat-dialog-actions>
-      <button mat-button (click)='login()'>Log In</button>
+      <button mat-button [disabled]="loginForm.invalid" (click)='login()'>Log In</button>
       <button mat-button (click)='openCreateAccount()'>Create Account</button>
     </mat-dialog-actions>
   </form>
