--- a/chat-app/src/app/components/content/content.component.html
+++ b/chat-app/src/app/components/content/content.component.html
@@ -12,7 +12,7 @@
         <mat-card>
           <mat-card-header>
             <img mat-card-avatar src='{{ message.user.profilePic }}'>
-            <mat-card-title>{{ message.user.name }}</mat-card-title>
+            <mat-card-title>{{ message.user.username }}</mat-card-title>
             <mat-card-subtitle>{{ message.date?.time }}</mat-card-subtitle>
           </mat-card-header>
           <mat-card-content>
