--- a/chat-app/src/app/components/start-page/start-page.component.html
+++ b/chat-app/src/app/components/start-page/start-page.component.html
@@ -1,4 +1,8 @@
 <div>
   <h3>Welcome to the ChatApp!</h3>
-  <p>Please <span class='clickable-text' (click)='openLogin()'>log in</span>/<span class='clickable-text' (click)='openCreateAccount()'>create account</span> to start chatting!</p>
+  <p>Please 
+    <span class='clickable-text' (click)='openLogin()'>log in</span>
+    /
+    <span class='clickable-text' (click)='openCreateAccount()'>create account</span> 
+    to start chatting!</p>
 </div>
