--- a/chat-app/src/app/components/create-account/create-account.component.scss
+++ b/chat-app/src/app/components/create-account/create-account.component.scss
@@ -3,14 +3,11 @@ h2 {
   font-weight: bold;
 }
 
-mat-dialog-options {
-  display: flex;
-  justify-content: center;
-}
-
-mat-dialog-content {
+.profilePic {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin-bottom: 1rem;
 }
 
 .errorMessage {
@@ -18,23 +15,6 @@ mat-dialog-content {
   left: 25px;
   width: 70%;
   color: red;
-}
-
-img {
-  width: 70px;
-  height: 70px;
-  border-radius: 100%;
-}
-
-img:hover {
-  cursor: pointer;
-}
-
-.profilePic {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 1rem;
 }
 
 .input-container {
@@ -47,6 +27,26 @@ img:hover {
   background-color: rgb(135, 216, 135);
   padding: 5px;
   border-radius: 10px;
+}
+
+img {
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+
+  :hover {
+    cursor: pointer;
+  }
+}
+
+mat-dialog-options {
+  display: flex;
+  justify-content: center;
+}
+
+mat-dialog-content {
+  display: flex;
+  flex-direction: column;
 }
 
 mat-dialog-actions {
