--- a/chat-app/src/app/components/login/login.component.html
+++ b/chat-app/src/app/components/login/login.component.html
@@ -25,9 +25,9 @@
       <button mat-button (click)='openCreateAccount()'>Create Account</button>
     </mat-dialog-actions>
   </form>
-  @if (!user() && loginSend) {
+  @if (loginSend) {
     <div class='spinner'>
-      <mat-spinner></mat-spinner>
+      <mat-spinner diameter="40" strokeWidth="5"></mat-spinner>
     </div>
   }
 }
