--- a/chat-app/src/app/components/login/login.component.scss
+++ b/chat-app/src/app/components/login/login.component.scss
@@ -1,6 +1,28 @@
+@use '@angular/material' as mat;
+
+progress-spinner {
+  @include mat.progress-spinner-overrides((
+    active-indicator-color: rgb(38, 0, 255)
+  ));
+}
+
 h2 {
   margin:auto;
   font-weight: bold;
+}
+
+.input-container {
+  margin-right: 24px;
+}
+
+.dialog {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.spinner {
+  margin-bottom: 2rem;
 }
 
 mat-dialog-options {
@@ -13,21 +35,7 @@ mat-dialog-content {
   flex-direction: column;
 }
 
-.input-container {
-  margin-right: 24px;
-}
-
 mat-dialog-actions {
   display: flex;
   justify-content: center;
-}
-
-.dialog {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.spinner {
-  margin-bottom: 2rem;
 }
