--- a/chat-app/src/app/components/toolbar/toolbar.component.scss
+++ b/chat-app/src/app/components/toolbar/toolbar.component.scss
@@ -1,26 +1,15 @@
-mat-toolbar {
-  color: purple;
-  display: flex;
-  justify-content: space-between;
-  height: 80px;
-  background-color: rgb(34, 33, 33);
-  font-size: 40px;
-  z-index: 100;
-}
-
 .top-right-buttons {
   display: flex;
   flex-direction: row;
-}
-
-.top-right-buttons * {
-  color: purple;
-  display: flex;
-  margin: 5px;
-  justify-content: center;
-  align-items: center;
-  width: 60px;
-  height: 60px;
+  * {
+    color: purple;
+    display: flex;
+    margin: 5px;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+  }
 }
 
 .custom-icon-size {
@@ -35,9 +24,12 @@ img {
   border-radius: 100vw;
 }
 
-.profile-information {
+mat-toolbar {
+  color: purple;
   display: flex;
-  flex-direction: column;
-  
-
+  justify-content: space-between;
+  height: 80px;
+  background-color: rgb(34, 33, 33);
+  font-size: 40px;
+  z-index: 100;
 }
